# msDeepToolset

LINUX/: CMakeLists.txt
MAC/: CMakeLists_MAC.txt
MAC/15.0v8/: msDeepBlur.dylib  msDeepKeymix.dylib
MAC/15.1v10/: msDeepBlur.dylib  msDeepKeymix.dylib
MAC/15.2v6/: msDeepBlur.dylib  msDeepKeymix.dylib
MAC/16.0v6/: msDeepBlur.dylib  msDeepKeymix.dylib
MAC/16.1v1/: msDeepBlur.dylib  msDeepKeymix.dylib
MAC/17.0v1/: msDeepBlur.dylib  msDeepKeymix.dylib
Mac/15.1v5/: msDeepBlur.dylib  msDeepKeymix.dylib  msDeepReformat.dylib
Mac/16.0v1/: msDeepBlur.dylib  msDeepKeymix.dylib  msDeepReformat.dylib
WIN/: CMakeLists_WIN.txt  building_step_by_step.txt
